--- a/contracts/package.json
+++ b/contracts/package.json
@@ -9,13 +9,20 @@
     "@nomiclabs/hardhat-truffle5": "^2.0.6",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "bignumber.js": "^9.0.2",
+    "chai": "^4.2.0",
     "ethers": "^5.6.8",
     "hardhat": "^2.9.7",
-    "truffle-assertions": "^0.9.2"
+    "truffle-assertions": "^0.9.2",
+    "web3": "^1.0.0-beta.36",
+    "web3-core-helpers": "^1.2.1",
+    "web3-core-promievent": "^1.2.1",
+    "web3-eth-abi": "^1.2.1",
+    "web3-utils": "^1.2.1"
   },
   "scripts": {
-    "build":  "yarn run hardhat compile",
-    "test":   "yarn run hardhat test",
-    "deploy": "yarn build && yarn test && yarn run hardhat run scripts/deploy.js || echo 'Deploy failed'"
+    "build": "yarn run hardhat compile",
+    "test": "yarn run hardhat test",
+    "deploy": "yarn run hardhat run scripts/deploy.js",
+    "echo": "echo \"$@\" && echo PLM"
   }
 }
