doh-proxy: redirect failed ddns request to icann proxy; frontend.env: add default configs for localhost node

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,8 +1,8 @@
 # Network config:
-NETWORK_NAME     = Ganache
+NETWORK_NAME     = Localhost
 NETWORK_CHAIN_ID = 0x539
-NETWORK_RPC_URL  = http://127.0.0.1:7545
+NETWORK_RPC_URL  = http://127.0.0.1:8545
 
 # DNS Service - Smart Contract config:
-DNS_SERVICE_ADDRESS  = 0x20a5A93032362c91Cc97173c33743960F3a330FD
+DNS_SERVICE_ADDRESS  = 0x5FbDB2315678afecb367f032d93F642f64180aa3
 DNS_SERVICE_ABI_PATH = /artifacts/DNS_Service.json
