--- a/doh-proxy/Cargo.toml
+++ b/doh-proxy/Cargo.toml
@@ -19,6 +19,7 @@ tls = ["libdoh/tls"]
 libdoh = { path = "src/libdoh", version = "0.9.3", default-features = false }
 clap = { version = "3.1.5", features = ["std", "cargo", "wrap_help"] }
 dnsstamps = "0.1.9"
+[target.'cfg(not(target_env = "msvc"))'.dependencies]
 jemallocator = "0.3.2"
 
 [package.metadata.deb]
