--- a/contracts/package.json
+++ b/contracts/package.json
@@ -10,6 +10,7 @@
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "bignumber.js": "^9.0.2",
     "chai": "^4.2.0",
+    "dotenv": "^16.0.1",
     "ethers": "^5.6.8",
     "hardhat": "^2.9.7",
     "truffle-assertions": "^0.9.2",
